fixed z-index on scroll

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -24,6 +24,7 @@ body
   height: 49px
   padding: 10px 0
   border-bottom: 1px solid #e5e5e5
+  z-index: 1
 
   .navContainer
     width: 80%
@@ -74,6 +75,7 @@ body
   width: 80%
   margin: auto
   padding-top: 70px
+  z-index: 0
 
 #left-col
   display: inline-block
@@ -119,6 +121,9 @@ body
       a
         color: $secondary-color
         text-decoration: none
+
+      a:hover
+        text-decoration: underline
 
   .followsStyle
     border-bottom: 1px solid
@@ -196,3 +201,11 @@ body
         text-decoration: none
         font-size: 12px
         font-weight: bold
+
+        .octicon
+          padding-right: 2px
+
+      .stats:hover
+        color: $secondary-color
+
+
